# mcp-freecad

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  commitlint.config.js  mypy.ini  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  ruff.toml
.github/workflows/: ci.yml  commitlint.yml  release-please.yml
addon/FreeCADMCP/rpc_server/: _commands.py  _dispatch.py  _fem_workdir.py  _request_tracking.py  _screenshot.py  _security_gate.py  _settings.py  parts_library.py  rpc_server.py  serialize.py
docs/: AI_HANDOFF.md  IMPROVEMENT_PLAN.md  PROFESSIONALIZATION_PLAN.md  gabarito_ia_extracted.txt
examples/: hello_freecad.py
src/freecad_mcp/: circuit_breaker.py  freecad_client.py  guidelines.py  json_logging.py  metrics.py  prompt_text.py  responses.py  schemas.py  server.py  server_state.py  tool_policy.py  utils.py
src/freecad_mcp/operations/: __init__.py  core.py
tests/: run_all_tests.py  run_guidelines_tests.py  test_circuit_breaker.py  test_client_server.py  test_export_compression.py  test_fem_workdir_cleanup.py  test_freecad_client.py  test_freecad_client_full.py  test_fuzz_properties.py  test_guidelines.py  test_logging.py  test_metrics.py  test_operations_core.py  test_parts_library.py  test_parts_list_cache.py  test_request_tracking.py  test_responses.py  test_rpc_gui_handlers.py  test_rpc_server.py  test_rpc_server_lifecycle.py  test_rpc_timeouts.py  test_rpc_tls_auth.py  test_schemas.py  test_screenshot_transcode.py  test_security_gate.py  test_serialize.py  test_serialize_full.py  test_server_module.py  test_server_module_full.py  test_server_state.py  test_settings_fallback.py  test_smoke_imports.py  test_tool_guard.py  test_tool_policy.py  test_utils.py  test_validate_allowed_ips.py
